--- a/public/css/app.css
+++ b/public/css/app.css
@@ -478,10 +478,52 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 0;
 }
 
+/* CSS DIRECTORY
+	1. =FONT FACE
+	2. =FONT WEIGHT
+*/
+/* ===FONT FACE=== */
 @font-face {
   font-family: "Open Sans";
   src: url("/fonts/OpenSans/OpenSans-Regular.ttf");
 }
+/* ===FONT WEIGHT=== */
+.font-hairline {
+  font-weight: 100;
+}
+
+.font-thin {
+  font-weight: 200;
+}
+
+.font-light {
+  font-weight: 300;
+}
+
+.font-normal {
+  font-weight: 400;
+}
+
+.font-medium {
+  font-weight: 500;
+}
+
+.font-semibold {
+  font-weight: 600;
+}
+
+.font-bold {
+  font-weight: 700;
+}
+
+.font-extrabold {
+  font-weight: 800;
+}
+
+.font-black {
+  font-weight: 900;
+}
+
 .p-label {
   margin-bottom: 0;
   font-weight: bolder;
