--- a/resources/sass/2-base/_typography.scss
+++ b/resources/sass/2-base/_typography.scss
@@ -1,5 +1,18 @@
-// @include font-face('RussoOne', '/fonts/RussoOne');
-// @include font-face('SairaStencilOne', '/fonts/SairaStencilOne');
-// @include font-face('Lato', '/fonts/Lato/Lato-Regular');
-// @include font-face('SourceSansPro', '/fonts/SourceSansPro/SourceSansPro-Regular');
+/* CSS DIRECTORY
+	1. =FONT FACE
+	2. =FONT WEIGHT
+*/
+
+/* ===FONT FACE=== */
 @include font-face('Open Sans', '/fonts/OpenSans/OpenSans-Regular');
+
+/* ===FONT WEIGHT=== */
+.font-hairline 	{ font-weight: 100; }
+.font-thin 		{ font-weight: 200; }
+.font-light 	{ font-weight: 300; }
+.font-normal 	{ font-weight: 400; }
+.font-medium 	{ font-weight: 500; }
+.font-semibold 	{ font-weight: 600; }
+.font-bold 		{ font-weight: 700; }
+.font-extrabold { font-weight: 800; }
+.font-black 	{ font-weight: 900; }
